<resources>
    <string name="app_name">FlowerGallery</string>
    <string name="title_home">Home</string>
    <string name="fav">Favorites</string>
    <string name="settings">Settings</string>
    <string name="enter_flower_name">Enter Flower Name</string>
    <string name="clear">clear</string>
    <string name="search_icon">search_flower</string>
    <string name="flower_viewing">Show seasonal details for flower viewing</string>
    <string name="long_text">"The common sunflower (Helianthus annuus) is a large annual forb of the genus Helianthus. It is commonly grown as a crop for its edible oily seeds. Apart from cooking oil production, it is also used as livestock forage (as a meal or a silage plant), as bird food, in some industrial applications, and as an ornamental in domestic gardens. Wild H. annuus is a widely branched annual plant with many flower heads. The domestic sunflower, however, often possesses only a single large inflorescence (flower head) atop an unbranched stem.  The binomial name Helianthus annuus is derived from the Greek Helios 'sun' and anthos 'flower', while the epithet annuus means 'annual' in Latin.  The plant was first domesticated in the Americas. Sunflower seeds were brought to Europe from the Americas in the 16th century, where, along with sunflower oil, they became a widespread cooking ingredient. With time, the bulk of industrial-scale production has shifted to Eastern Europe, and (as of 2020) Russia and Ukraine together produce over half of worldwide seed production.  "</string>
    <string name="flower_name">Flower Name</string>
    <string name="back">back</string>
    <string name="flower_image">flower_image</string>
    <string name="favorite_flowers">Favorite Flowers</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_in_animation">Fade In Animation</string>
    <string name="fade_out">Fade Out</string>
    <string name="fade_out_animation">Fade out Animation</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_in_animation">Zoom In Animation</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_out_animation">Zoom out Animation</string>
    <string name="blink">Blink</string>
    <string name="blink_animation">Blink Animation</string>
    <string name="move">Move</string>
    <string name="move_animation">Move Animation</string>
</resources>